[gd_scene format=3 uid="uid://fiwhbl6v82c0"]

[ext_resource type="Script" uid="uid://dg02p7mumuus" path="res://scenes/menu/JournalOverlay.gd" id="1"]
[ext_resource type="Theme" uid="uid://dgt5fjkytx07d" path="res://assets/resources/menu_theme.tres" id="2_theme"]
[ext_resource type="FontFile" uid="uid://bxph8sc2vndn" path="res://assets/fonts/CormorantGaramond/CormorantGaramond-SemiBold.ttf" id="3_serif"]
[ext_resource type="FontFile" uid="uid://g7ngd4oyyd5d" path="res://assets/fonts/CormorantGaramond/CormorantGaramond-Regular.ttf" id="4_serif_regular"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font = ExtResource("3_serif")
font_size = 36
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_subtitle"]
font = ExtResource("4_serif_regular")
font_size = 16
font_color = Color(0.329, 0.345, 0.365, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.635, 0.663, 0.694, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="JournalOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1")

[node name="DimRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.35)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -300.0
offset_right = 380.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HeaderHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Explorer's Journal"
label_settings = SubResource("LabelSettings_title")

[node name="CloseBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
size_flags_vertical = 0
text = "X"

[node name="SubtitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "From Museum of All Things, the free encyclopedia"
label_settings = SubResource("LabelSettings_subtitle")

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ContentLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
fit_content = true
bbcode_enabled = true
scroll_active = false

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NavHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PrevBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/NavHBox"]
layout_mode = 2
text = "< Prev"

[node name="PageLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/NavHBox"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
horizontal_alignment = 1

[node name="NextBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/NavHBox"]
layout_mode = 2
text = "Next >"
